# Python

./: AI.py  chemin.txt  divis.py  multipli.py  nb premiers.py  reconaissance.py  test 2.py  test.py  test1.py  zcasino.py
AI/: AI.py  (+2 more)
Bataille navale/: .gitignore  Boat.py  Bot.py  Client.py  Game.py  GameServeurManager.py  Grid.py  Grille.py  Main.py  Player.py  README.md  Server.py  Serveur.py  pyproject.toml
Bataille navale/battleship/: config.py
Bataille navale/battleship/engine/: game.py  skirmish.py  specials.py
Bataille navale/battleship/models/: boat.py  bot.py  grid.py  player.py
Bataille navale/battleship/network/: client.py  connection.py  match.py  server.py
Bataille navale/battleship/ui/: board_view.py  events.py  input_handler.py  match_view.py  screens.py  sound.py  sprites.py  widgets.py
Bataille navale/private/: nicknames.example.json
Bataille navale/tests/: test_autoplay.py  test_boat.py  test_bot.py  test_config.py  test_connection.py  test_grid.py  test_match_view.py  test_player.py  test_server.py  test_skirmish.py  test_specials.py  test_widgets.py
Bet Game/: .gitignore  main.py  pyproject.toml
Bet Game/bet_game/: config.py
Bet Game/bet_game/engine/: dare.py  game.py  minigame.py  objects.py  round.py  wording.py
Bet Game/bet_game/models/: gender.py  player.py
Bet Game/bet_game/ui/: card.py  events.py  screens.py  widgets.py
Bet Game/private/: __init__.py  dares.example.py  duels.example.py  objects.example.py  simulations.example.py
Bet Game/tests/: test_dare.py  test_engine.py  test_objects.py  test_wording.py
(+9 files in other folders)
