[project]
name = "battleship"
version = "0.1.0"
description = "A local, Pygame-based Battleship (Bataille navale) game."
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.1",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
